fix: gap between cards desktop view

--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ a {
   .cards {
     display: grid;
     grid-template-columns: 50% 50%;
+    gap: 20px;
   }
   .footer {
     display: flex;
