--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -314,6 +314,7 @@ $third-background-color: #353535;
     .cards {
         display: grid;
         grid-template-columns: 50% 50%;
+        gap: 20px;
     }
 
     .footer {
